# NCC-old

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  STYLE.md  input.c
.github/workflows/: cmake.yml
src/: hashmap.c  hashmap.h  main.c  vec.c  vec.h
src/utils/: hashmap.c  hashmap.h  panic.c  panic.h  vec.c  vec.h
